<resources>
    <string name="app_name">SweetApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open_tenant">Open navigation drawer</string>
    <string name="navigation_drawer_close_tenant">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account_management">إدارة الحساب</string>
    <string name="menu_list_of_chalets">قائمة الشاليهات</string>
    <string name="menu_list_of_requests">قائمة الطلبات</string>
    <string name="menu_list_of_myrequests">قائمة طلباتي</string>
    <string name="menu_favorite">المفضلة</string>
    <string name="menu_logout">تسجيل الخروج</string>
    <string name="title_activity_tenant_main">TenantMainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">البريد الالكتروني</string>
    <string name="login_password_hint">كلمة السر</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">نسيت كلمة المرور</string>
    <string name="login_name_hint">الأسم الرباعي</string>
    <string name="login_mobile_number_hint">رقم الهاتف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>