<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account_management_tenant"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_account_management" />
        <item
            android:id="@+id/nav_list_of_chalets_tenant"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_list_of_chalets" />
        <item
            android:id="@+id/nav_list_of_favorite_tenant"
            android:icon="@drawable/ic_baseline_favorite_border_off"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/nav_list_of_myrequests_tenant"
            android:icon="@drawable/ic_baseline_hourglass_empty_24"
            android:title="@string/menu_list_of_myrequests" />

        <item
            android:id="@+id/nav_logout_tenant"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />

    </group>
</menu>