<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account_management"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_account_management" />
        <item
            android:id="@+id/nav_list_of_chalets"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_list_of_chalets" />
        <item
            android:id="@+id/nav_list_of_requests"
            android:icon="@drawable/ic_baseline_hourglass_empty_24"
            android:title="@string/menu_list_of_requests" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />

    </group>
</menu>