<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_tenant"
    app:startDestination="@+id/nav_listOfChaletsTenant_tenant">

    <fragment
        android:id="@+id/nav_accountManagement_tenant"
        android:label="@string/menu_account_management"
        android:name="com.example.sweetapp.ui.listOfChaletsTenant.ListOfChaletsTenantFragment"
        tools:layout="@layout/fragment_accountmanagement" />

    <fragment
        android:id="@+id/nav_listOfChaletsTenant_tenant"
        android:label="@string/menu_list_of_chalets"
        android:name="com.example.sweetapp.ui.listOfChaletsTenant.ListOfChaletsTenantFragment"
        tools:layout="@layout/fragment_listofchaletstenant" />

    <fragment
        android:id="@+id/nav_listOfRequests_tenant"
        android:name="com.example.sweetapp.ui.listFavoritesFragment.ListFavoritesFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_listfavorites" />





</navigation>